// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageCookies with osano renders button 1`] = `
<button
  className="sc-gsnTZi sc-dkzDqf czjxlp jmylct"
  onClick={[Function]}
>
  Manage Cookies
</button>
`;

exports[`ManageCookies with osano renders button in wrapper 1`] = `
<div>
  <button
    className="sc-gsnTZi sc-dkzDqf czjxlp jmylct"
    onClick={[Function]}
  >
    Manage Cookies
  </button>
</div>
`;

exports[`ManageCookies with osano renders button with content 1`] = `
<button
  className="sc-gsnTZi sc-dkzDqf czjxlp jmylct"
  onClick={[Function]}
>
  some content
</button>
`;

exports[`ManageCookies without osano renders nothing 1`] = `null`;

exports[`ManageCookies without osano renders nothing, even a wrapper 1`] = `null`;
